--- a/27-05-21/login.html
+++ b/27-05-21/login.html
@@ -1,9 +1,13 @@
 <html>
 <head>
     <title>LOGIN Form </title>
-<body  bgcolor="iceblue">
-<h1 style=color:rgb(255,0,0);>LOGIN YOURSELF</h1>
-<form>
+<link rel="stylesheet" href="style.css">
+ </head>
+<body>
+<div>
+<h1>LOGIN YOURSELF</h1>
+</div>
+<form >
     Email Id:<br>
     <input type="email" name="Email Id" placeholder="Enter Email Id" required><br>
     User Password:<br>
@@ -11,6 +15,6 @@
 
     <input type="Submit" name="Submit" value="LOGIN"><br>
 </form>
-<a href="sign up.html">Click Here For Sign-Up</a>
+<a href="sign up.html"><h3 style="text-align: center;color:lightgoldenrodyellow;">Click Here For Sign-Up</h3></a>
 </body>
 </html>
