--- a/27-05-21/sign up.html
+++ b/27-05-21/sign up.html
@@ -1,9 +1,13 @@
 <html>
 <head>
     <title>SIGN-UP Form </title>
-<body  bgcolor="iceblue">
-<h1 style=color:rgb(255,0,0);>SIGN-UP YOURSELF</h1>
-<form >
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<div>
+<h1>SIGN-UP YOURSELF</h1>
+</div>
+<form>
     Email Id:<br>
     <input type="email" name="Email Id" placeholder="Enter Email Id" required><br>
     User Password:<br>
@@ -11,6 +15,6 @@
 
     <input type="Submit" name="Submit" value="SIGN-UP"><br>
 </form>
-<a href="login.html">Click Here For Login</a>
+<a href="login.html"><h3 style="text-align: center;color:lightgoldenrodyellow;">Click Here For Login</h3></a>
 </body>
 </html>
