--- a/27-05-21/login.html
+++ b/27-05-21/login.html
@@ -15,6 +15,6 @@
 
     <input type="Submit" name="Submit" value="LOGIN"><br>
 </form>
-<a href="sign up.html"><h3 style="text-align: center;color:lightgoldenrodyellow;">Click Here For Sign-Up</h3></a>
+<a href="sign up.html"><h3 style="text-align: center;color:rgb(250,250,210);">Click Here For Sign-Up</h3></a>
 </body>
 </html>
