--- a/27-05-21/sign up.html
+++ b/27-05-21/sign up.html
@@ -8,6 +8,8 @@
 <h1>SIGN-UP YOURSELF</h1>
 </div>
 <form>
+    Username:<br>
+    <input type="text" name="Name" placeholder="Enter Username" required><br>
     Email Id:<br>
     <input type="email" name="Email Id" placeholder="Enter Email Id" required><br>
     User Password:<br>
@@ -15,6 +17,6 @@
 
     <input type="Submit" name="Submit" value="SIGN-UP"><br>
 </form>
-<a href="login.html"><h3 style="text-align: center;color:lightgoldenrodyellow;">Click Here For Login</h3></a>
+<a href="login.html"><h3 style="text-align: center;color:rgb(250,250,210);">Click Here For Login</h3></a>
 </body>
 </html>
