--- a/27-05-21/welcome.html
+++ b/27-05-21/welcome.html
@@ -8,8 +8,8 @@
         <h1>Welcome To My Page</h1>
     </div>
     <h2>New to Page</h2>
-    <a href="sign up.html"><h3 style="text-align: center; color: red;">Click Here For Sign-Up</h3></a>
+    <a href="sign up.html"><h3 style="text-align: center; color:rgb(255,0,0);">Click Here For Sign-Up</h3></a>
     <h2>Existing Ones</h2>
-    <a href="login.html"><h3 style="text-align: center;color: red;">Click Here For Login</h3></a>
+    <a href="login.html"><h3 style="text-align: center;color:rgb(255,0,0);">Click Here For Login</h3></a>
 </body>
 </html>
