--- a/Assignment 5/assign5.html
+++ b/Assignment 5/assign5.html
@@ -11,6 +11,7 @@
         <img src="GitHub-Mark-Light-64px.png" width="100px" height="100px" >
     </div>
     <h1 class="h1">Sign in to GitHub</h1>
+    <div>
     <form class="box1">
         <label style="color: white; font-size: 16px;">Username or email address</label><br/>
         <input type="text" name="username" value=" " required><br/>
@@ -20,8 +21,6 @@
         <h3 class="pass"><a href="https://github.com/password_reset" style="text-decoration: none;">Forgot password?</a></h3>
         </form>
         <h3 class="box2">New to GitHub?<a href="https://github.com/join?source=login" style="text-decoration: none;" >&nbsp;Create an account.</a></h3>
-
-    </div>
-
+   </div>
 </body>
 </html>
